--- a/composer.json
+++ b/composer.json
@@ -3,14 +3,14 @@
     "description": "Magento module wrapper for LightGallery",
     "require": {
         "php": "*",
-        "magento/module-ui": "100.1.1",
+        "msp/common": "*",
         "magento/magento-composer-installer": "*"
     },
     "suggest": {
 
     },
     "type": "magento2-module",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "license": "OSL 3.0",
     "autoload": {
         "files": [
